--- a/src/styles/DisplayItem.css
+++ b/src/styles/DisplayItem.css
@@ -1,11 +1,11 @@
 .grid-item {
-    border: 1px solid #ccc;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
     color: black;
-    display: none;
+    display: none; 
 }
 
 .grid-item.has-item {
-    display: block;
+    display: block; 
 }
