--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,10 @@
 .appHidden {
   display: none
 }
+
+.gameDiv {
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: space-around;
+}
