--- a/src/styles/ItemContainer.css
+++ b/src/styles/ItemContainer.css
@@ -1,25 +1,30 @@
 .item-container {
-    margin: 10px;
+    margin: 0px;
     padding: 10px;
-    background-color: #fff;
-    border-radius: 5px;
+    margin:1px;
+    background-color: rgb(11, 35, 58);;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: rgb(26, 77, 126);
+    border-width: 10px;
     box-shadow: 0 0 5px 0 #000;
-    height: 600px;
-    width: 300px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 20px;
-    justify-items: end;
+    height: 730px;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-items:start;
+    align-items: center;
 }
 
 .inventory {
-    padding: 1em;
-    margin: 1em;
+    padding: 1.3em;
+    margin: 0px;
     display: flex;
-    flex-direction: column;
-    justify-content: top center;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
     color: black;
     font-size: larger;
     font-weight: bold;
-    position: relative;
+    height: 0px
 }
