--- a/src/styles/TopNavigationBar.css
+++ b/src/styles/TopNavigationBar.css
@@ -25,9 +25,11 @@
 
 .nav-box {
     background-color: #ffcc00; 
-    color: #ffffff; 
+    color: #8a772d;  
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(80, 80, 80);
     font-family: 'Roboto', sans-serif; 
-    font-size: 18px;
+    font-size: 40px;
     padding: 10px 20px;
     margin-right: 10px;
     border-radius: 20px;
@@ -41,9 +43,11 @@
 
 .small-nav-box {
     background-color: #ffcc00;
-    color: #ffffff;
+    color: #8a772d;  
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(80, 80, 80);
     font-family: 'Roboto', sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     padding: 5px 10px;
     margin-right: 10px;
     border-radius: 10px;
